--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "ganache-cli": "^6.10.2",
     "mocha": "^8.1.3",
     "solc": "^0.7.1",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
